--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Coby Jenkin's Assignments</title>
-	<style>
-		body {
-			background-image: url("../assets/img/dnd_background.png");
-			background-repeat: no-repeat;
-			background-color: #fdf6e2;
-			color: black;
+    <title>Coby Jenkin's Assignments</title>
+    <style>
+        body {
+            background-image: url("../assets/img/dnd_background.png");
+            background-repeat: no-repeat;
+            background-color: #fdf6e2;
+            color: black;
 
-		}
-	</style>
+        }
+    </style>
 </head>
 <body>
-	<h1 style="text-align:center">CS 213 Assignments</h1>
-	<br />
-	<br />
-	<ul style="list-style-position: inside; text-align: center">
-		<li><a href="assign02.html" title="Assignment 02">Assignment 02</a></li>
-		<li><a href="assign03.html" title="Assignment 03">Assignment 03</a></li>
-		<li><a href="assign04.html" title="Assignment 04">Assignment 04</a></li>
-		<li><a href="assign05.html" title="Assignment 05">Assignment 05</a></li>
-		<li><a href="assign06.html" title="Assignment 06">Assignment 06</a></li>
-		<li><a href="assign07.html" title="Assignment 07">Assignment 07</a></li>
-		<li><a href="assign08.html" title="Assignment 08">Assignment 08</a></li>
-		<li><a href="assign09.html" title="Assignment 09">Assignment 09</a></li>
-		<li><a href="assign10.html" title="Assignment 10">Assignment 10</a></li>
-		<li><a href="assign11.html" title="Assignment 11">Assignment 11</a></li>
-		<li><a href="assign12.html" title="Assignment 12">Assignment 12</a></li>
-		<li><a href="assign13.html" title="Assignment 13">Assignment 13</a></li>
-	</ul>
+<h1 style="text-align:center">CS 213 Assignments</h1>
+<br/>
+<br/>
+<ul style="list-style-position: inside; text-align: center">
+    <li><a href="assign02.html" title="Assignment 02">Assignment 02</a></li>
+    <li><a href="assign03.html" title="Assignment 03">Assignment 03</a></li>
+    <li><a href="assign04.html" title="Assignment 04">Assignment 04</a></li>
+    <li><a href="assign05.html" title="Assignment 05">Assignment 05</a></li>
+    <li><a href="assign06.html" title="Assignment 06">Assignment 06</a></li>
+    <li><a href="assign07.html" title="Assignment 07">Assignment 07</a></li>
+    <li><a href="assign08.html" title="Assignment 08">Assignment 08</a></li>
+    <li><a href="assign09.html" title="Assignment 09">Assignment 09</a></li>
+    <li><a href="assign10.html" title="Assignment 10">Assignment 10</a></li>
+    <li><a href="assign11.html" title="Assignment 11">Assignment 11</a></li>
+    <li><a href="assign12.html" title="Assignment 12">Assignment 12</a></li>
+    <li><a href="assign13.html" title="Assignment 13">Assignment 13</a></li>
+</ul>
 </body>
 </html>
