--- a/public_html/assign09.html
+++ b/public_html/assign09.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Assignment 09</title>
+    <title>Assignment 09</title>
 </head>
 <body>
-	<p style="text-align: center">This will be assignment #09</p>
+<p style="text-align: center">This will be assignment #09</p>
 
 </body>
 </html>
