code reformated to match style

--- a/public_html/assign02.html
+++ b/public_html/assign02.html
@@ -22,7 +22,7 @@
 <body>
 <header style="text-align: center">
     <h1 style="font-family: Times New Roman, serif">Here is Coby's page</h1>
-    <a href="index.html" title="CS213 Assignments Page" style="font-family: Arial, sans-serif">CS 213 Assignments</a>
+    <a href="../index.html" title="CS213 Assignments Page" style="font-family: Arial, sans-serif">CS 213 Assignments</a>
     <hr>
 </header>
 
