code reformated to match style

--- a/public_html/assign02.html
+++ b/public_html/assign02.html
@@ -4,7 +4,7 @@
     <title>Coby Jenkins' Home Page</title>
     <style>
         body {
-            background-image: url("../assets/img/dnd_background.png");
+            background-image: url("assets/img/dnd_background.png");
             background-repeat: no-repeat;
             background-color: #fdf6e2;
             color: black;
@@ -29,7 +29,7 @@
 <main>
     <table id="info">
         <tr>
-            <td rowspan="3"><img src="../assets/img/me.jpg" alt="My beautiful face"></td>
+            <td rowspan="3"><img src="assets/img/me.jpg" alt="My beautiful face"></td>
             <td><b>NAME:</b> Coby Jenkins</td>
         </tr>
         <tr>
