--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
     <title>Coby Jenkin's Assignments</title>
     <style>
         body {
-            background-image: url("../assets/img/dnd_background.png");
+            background-image: url("assets/img/dnd_background.png");
             background-repeat: no-repeat;
             background-color: #fdf6e2;
             color: black;
