--- a/public_html/assign04.html
+++ b/public_html/assign04.html
@@ -2,9 +2,85 @@
 <html lang="en">
 <head>
     <title>Assignment 04</title>
+    <link rel="stylesheet" type="text/css"
+          href="assets/styles/assign04_styleSheet.css">
+
+    <style>
+        #query {
+            font-family: "Comic Sans MS", sans-serif;
+            font-style: italic;
+            text-align: center;
+        }
+
+        #response {
+            font-size: large;
+        }
+
+        .contentBody *{
+            margin: 5px 10px;
+            padding: 0 10px;
+        }
+
+        .sideBar{
+            height: 300px;
+        }
+    </style>
 </head>
+
 <body>
-<p style="text-align: center">This will be assignment #04</p>
+<div class="header">
+    <h1>Welcome to<span style="text-decoration: underline; font-style: italic">MY
+    </span>Basement !</h1>
+</div>
+
+<div class="navigation">
+    <a href="assign04.html" id="currentPage">Home</a>
+    <a href="assign04_2.html">Services</a>
+</div>
+
+<div class="contentBody main">
+    <h2>Welcome to my basement!</h2>
+    <p id="query">"And who might you be?"</p>
+    <p id="response">Well I am a Professional Dungeon Master! Hire me for your
+        next event
+        and I will run a custom adventure to suit you and your party's
+        needs!</p>
+    <p id="query">"Dungeon Master? Adventure?"</p>
+    <p id="response">Yeah as in Dungeons & Dragons. It is a great game that combines
+        imagination, adventure, problem solving, teamwork and it allows you
+        to be the hero in your own story.</p>
+</div>
+
+<div class="contentBody sideBar">
+    <h4>New to Dungeons & Dragons?</h4>
+    <p>Useful Links</p>
+    <a href="https://www.dndbeyond.com/essentials"
+       title="D&D Beyond - Start Your D&D Adventure!" style="text-decoration:
+        none">D&D Beyond</a>
+</div>
+
+<div class="footer">
+    <a href="index.html">INDEX</a>
+</div>
 
 </body>
 </html>
+
+<!--TODO: 5 or more "internal" style rule-sets per web page.
+            Make these "internal" styles different for each web page.
+            Page 1: 3-->
+
+<!--TODO: You must specify with "styles" at least 3 different font families -->
+
+<!--TODO: You must specify with "styles" at least 3 different font sizes -->
+
+<!--TODO: You must also use the <span> and <div> tags.
+            These tags are useful for applying a combination of styles to different sections of your web page. -->
+
+<!--TODO: Include images, internal links, and external links as needed. -->
+
+<!--TODO: Create a business website that consists of two web pages on your
+            home directory. -->
+
+<!--TODO: Be sure your external style sheet has read privileges for the world
+            (chmod 755 your.css), otherwise it won't work. -->
