--- a/public_html/assign05.html
+++ b/public_html/assign05.html
@@ -24,67 +24,125 @@
 <main>
     <div class="main-flex">
         <h1>So many dice!</h1>
-        When it comes to playing Dungeons & Dragons, the only thing that you
-        will need to purchase in order to play is a set of dice. This isn't
-        your standard set of two cube dice that you are used to throwing when
-        you are playing Monopoly or Risk, this set of 7 dice will help
-        determine the fate of your character and the results of their
-        actions. Each of these have a unique shape, name and are generally
-        used for a wide variety of purposes in the game.
+        <p>
+            When it comes to playing Dungeons & Dragons, the only thing that you
+            will need to purchase in order to play is a set of dice. This isn't
+            your standard set of two cube dice that you are used to throwing
+            when
+            you are playing Monopoly or Risk, this set of 7 dice will help
+            determine the fate of your character and the results of their
+            actions. Each of these have a unique shape, name and are generally
+            used for a wide variety of purposes in the game.
+        </p>
 
         <div class="main-row">
-            <img src="assets/img/w05/d20.png">
-            <h3 id="d20"> D20 - Icosahedron (20 sides) </h3>
-            When you think of D&D and dice this is probably what most people
-            think of. This is used when you want to know if something you
-            tried to do was successful. You have a 5% chance to land on a
-            "natural" 20 and score a critical hit!
+            <div>
+                <img src="assets/img/w05/d20.png">
+            </div>
+            <div>
+                <h3 id="d20"> D20 - Icosahedron (20 sides) </h3>
+                <p>
+                    When you think of D&D and dice this is probably what most
+                    people
+                    think of. This is used when you want to know if something
+                    you
+                    tried to do was successful. You have a 5% chance to land on
+                    a
+                    "natural" 20 and score a critical hit!
+                </p>
+            </div>
+        </div>
+
+        <div class="main-row-left">
+            <div>
+                <img src="assets/img/w05/d12.png">
+            </div>
+            <div>
+                <h3 id="d12">
+                    D12 - Dodecahedron (12 sides)
+                </h3>
+                <p>
+                    This is one of the least common used dice in D&D as it is
+                    most
+                    commonly used to roll damage on the largest weapons.
+                </p>
+            </div>
+        </div>
+
+        <div class="main-row">
+            <div>
+                <img src="assets/img/w05/d10.png">
+            </div>
+            <div>
+                <h3 id="d10">
+                    D10 - Pentagonal Trapezohedron (10 sides)
+                </h3>
+                <p>
+                    The set of D&D dice contains not one but TWO d10 dice. The
+                    faces of
+                    one are numbered 0 to 9, and the faces of the other go from
+                    00 to
+                    90 by tens. This is used for mainly for rolling damage but
+                    using
+                    the two together allows you to roll what is called a
+                    percentile
+                    roll. To make a 'percentile' roll, you roll both die and add
+                    them
+                    together, with one exception: a double zero roll is 100.
+                </p>
+            </div>
+        </div>
+
+        <div class="main-row-left">
+            <div>
+                <img src="assets/img/w05/d8.png">
+            </div>
+            <div>
+                <h3 id="d8">
+                    D8 - Octahedron (8 sides)
+                </h3>
+                <p>
+                    Often used to roll damage done by large weapons.
+                </p>
+            </div>
         </div>
 
 
         <div class="main-row">
-            <img src="assets/img/w05/d12.png">
-            <h3 id="d12">D12 - Dodecahedron (12 sides) </h3>
-            This is one of the least common used dice in D&D as it is most
-            commonly used to roll damage on the largest weapons.
+            <div>
+                <img src="assets/img/w05/d6.png">
+            </div>
+            <div>
+                <h3 is="d6">
+                    D6 - Cube (6 sides)
+                </h3>
+                <p>
+                    Your common run of the mill die. This is used for everything
+                    from
+                    rolling the starting stats on your character to rolling the
+                    damage from a wizards fireball.
+                </p>
+            </div>
         </div>
 
 
-        <div class="main-row">
-            <img src="assets/img/w05/d10.png">
-            <h3 id="d10">D10 - Pentagonal Trapezohedron (10 sides)</h3>
-            The set of D&D dice contains not one but TWO d10 dice. The faces of
-            one are numbered 0 to 9, and the faces of the other go from 00 to
-            90 by tens. This is used for mainly for rolling damage but using
-            the two together allows you to roll what is called a percentile
-            roll. To make a 'percentile' roll, you roll both die and add them
-            together, with one exception: a double zero roll is 100.
-        </div>
-
-
-        <div class="main-row">
-            <img src="assets/img/w05/d8.png">
-            <h3 id="d8">D8 - Octahedron (8 sides)</h3>
-            Often used to roll damage done by large weapons.
-        </div>
-
-
-        <div class="main-row">
-            <img src="assets/img/w05/d6.png">
-            <h3 is="d6">D6 - Cube (6 sides)</h3>
-            Your common run of the mill die. This is used for everything from
-            rolling the starting stats on your character to rolling the
-            damage from a wizards fireball.
-        </div>
-
-
-        <div class="main-row">
-            <img src="assets/img/w05/d4.png">
-            <h3 id="d4">D4 - Tetrahedron (4 sides)</h3>
-            This is the one die that is more dangerous outside of the game than
-            inside of the game, mainly because it is more violent to the
-            unprotected foot than legos ever were. Commonly used to determine
-            the damage caused by small weapons.
+        <div class="main-row-left">
+            <div>
+                <img src="assets/img/w05/d4.png">
+            </div>
+            <div>
+                <h3 id="d4">
+                    D4 - Tetrahedron (4 sides)
+                </h3>
+                <p>
+                    This is the one die that is more dangerous outside of the
+                    game than
+                    inside of the game, mainly because it is more violent to the
+                    unprotected foot than legos ever were. Commonly used to
+                    determine
+                    the damage caused by small weapons.
+                </p>
+            </div>
         </div>
     </div>
 </main>
@@ -93,8 +151,6 @@
 </body>
 </html>
 
-
-<!--TODO: Create a webpage in your home directory named assign05.html.-->
 
 <!--TODO: This must be new web page with new content. You may not use any of
           your previous web pages. This web page should look good on any
