W06 Group Assignment final commit

--- a/group_week06/group_week06.html
+++ b/group_week06/group_week06.html
@@ -90,7 +90,7 @@
 	</style>
 </head>
 <body>
-	<section id="flex_first" class="blue_rounded">
+<!--	<section id="flex_first" class="blue_rounded">
 		<ul class="center_list white_rounded">
 			<li>First list item</li>
 			<li>Second list item</li>
@@ -150,7 +150,7 @@
 				</li>
 			</ul>
 		</form>
-	</section>
+	</section>-->
 	
 	<section id="grid_first" class="blue_rounded">
 		<article class="example_article white_rounded">
@@ -214,7 +214,7 @@
 		</article>
 	</section>
 	
-	<section id="grid_second" class="blue_rounded">
+	<!--<section id="grid_second" class="blue_rounded">
 		<div class="box1 white_rounded">One</div>
 		<div class="box2 white_rounded">Two</div>
 		<div class="box3 white_rounded">Three</div>
@@ -229,6 +229,6 @@
 			<div class="flex_div blue_rounded">Flex Three</div>
 			<div class="flex_div blue_rounded">Flex Four</div>
 		</div>
-	</section>
+	</section>-->
 </body>
 </html>
