W06 assignment in progress

--- a/public_html/assign06.html
+++ b/public_html/assign06.html
@@ -4,13 +4,13 @@
     <title>Assignment 06</title>
 </head>
 <body>
-<header>
+<header class="header">
     <div id="header_left">
         <img src="assets/img/w06/logo_black.png">
     </div>
 </header>
 
-<nav>
+<nav class="sideNav">
     <a href="assign06.html" id="currentPage">University</a>
     <a href="assign06_2.html">Academics</a>
     <a href="assign06.html">Athletics</a>
