--- a/public_html/assign07.html
+++ b/public_html/assign07.html
@@ -7,47 +7,50 @@
 </head>
 <body>
 
-<form id="mortgageCalc">
-    <table>
-        <tr>
-            <td>APR:</td>
-            <td><input type="text" name="apr" id="apr"
-                       onblur="validateNumericInput('apr')"></td>
-            <td><p class="errorMessage"  id="aprError"></p></td>
-        </tr>
-        <tr>
-            <td>Term (in years):</td>
-            <td><input type="text" name="term" id="term"
-                       onblur="validateNumericInput('term')"></td>
-            <td><p class="errorMessage"  id="termError"></p></td>
-        </tr>
-        <tr>
-            <td>Loan Amount:</td>
-            <td><input type="text" name="amount" id="amount"
-                       onblur="validateNumericInput('amount')"></td>
-            <td><p class="errorMessage" id="amountError"></p></td>
-        </tr>
-        <tr>
-            <td>
-                <button type="button" id="clear"
-                        onclick="resetForm()">Clear
-                </button>
-            </td>
-            <td>
-                <button type="button" id="calculate"
-                        onclick="calculateMonthlyPayment()">Calculate
-                </button>
-            </td>
-            <td>
-                <p class="errorMessage" id="calculateError"></p>
-            </td>
-        </tr>
-        <tr>
-            <td>Monthly Payment:</td>
-            <td><p id="payment"></p></td>
-        </tr>
-    </table>
-</form>
+<header class="header">
+    <h1>Mortgage Payment Calculator</h1>
+    <img src="assets/img/w07/header_buying_house.jpg" height="243">
+</header>
+<div id="mainContent">
+    <form id="mortgageCalc">
+        <table>
+            <tr>
+                <td>APR:</td>
+                <td><input type="text" name="apr" id="apr"
+                           onblur="validateAPRInput()"></td>
+                <td><p class="errorMessage" id="aprError"></p></td>
+            </tr>
+            <tr>
+                <td>Loan Term (in years):</td>
+                <td><input type="text" name="term" id="term"
+                           onblur="validateTermInput()"></td>
+                <td><p class="errorMessage" id="termError"></p></td>
+            </tr>
+            <tr>
+                <td>Loan Amount - (in dollars):</td>
+                <td><input type="text" name="amount" id="amount"
+                           onblur="validateAmountInput()"></td>
+                <td><p class="errorMessage" id="amountError"></p></td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="button" id="clear"
+                            onclick="resetForm()">Clear
+                    </button>
+                </td>
+                <td>
+                    <button type="button" id="calculate"
+                            onclick="calculateMonthlyPayment()">Calculate
+                    </button>
+                </td>
+            </tr>
+            <tr id="results">
+                <td>Monthly Payment:</td>
+                <td><p id="payment"></p></td>
+            </tr>
+        </table>
+    </form>
+</div>
 
 </body>
 </html>
