--- a/public_html/assign06_4.html
+++ b/public_html/assign06_4.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Assignment 06</title>
+    <title>Prepare 05.3</title>
+    <meta charset="utf-8" />
 </head>
 <body>
-<p style="text-align: center">This will be assignment #06</p>
-
+<p id="content">Alpha</p>
+<script>
+  document.getElementById("content").innerHTML = "Beta";
+</script>
 </body>
 </html>
